CSS + SPAN class changes to fix view ability issues on short desktop browser, as well as mobile that caused nav items to be cut off

--- a/css/trs-theme.css
+++ b/css/trs-theme.css
@@ -1308,7 +1308,7 @@ textarea.input-group-sm > .form-control, textarea.input-group-sm > .input-group-
 { font-family: 'PlutoSansBold', Helvetica, Arial, sans-serif; font-size: 13px; line-height: .9; color: #fff; text-transform: uppercase; padding: 15px; display: block; }
 .navbar-inverse .nav-stacked li a:hover { color: #88e333; }
 .navbar-inverse .nav-stacked .dropdown-menu-sub > li > a { font-family: 'PlutoSansRegular', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1; color: #999; text-transform: none; padding: 10px 15px; display: block; }
-.navbar-inverse .nav-stacked li.dropdown a, .navbar-inverse .nav-stacked li.alt a { padding: 15px 30px 15px 15px; }
+.navbar-inverse .nav-stacked li.dropdown a, .navbar-inverse .nav-stacked li.alt a { padding: 14px 30px 14px 15px; }
 .navbar-inverse .nav-stacked li.nav-stacked-top { font-size: 18px; line-height: 1; color: #88e333; padding: 15px 15px; }
 .navbar-inverse .nav-stacked.nav-utility li.nav-stacked-top { background-color: #474747; }
 .navbar-inverse .nav-stacked.nav-utility li.nav-contact { padding: 20px 15px; }
